added navigation bar

--- a/keyOS/res/values/styles.xml
+++ b/keyOS/res/values/styles.xml
@@ -34,8 +34,15 @@
         <item name="fontFamily">@font/roboto_medium</item>
         <item name="android:navigationBarColor">@color/colorPrimary</item>
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
-
     </style>
+
+    <style name="SettingsPage" parent="keyOS">
+        <item name="statusBarBackground">@null</item>
+        <item name="windowActionModeOverlay">true</item>
+        <item name="windowActionBar">false</item>
+            <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
 
     <style name="EditTextStyle" parent="Widget.AppCompat.EditText">
         <item name="colorPrimary">@color/buttonColor</item>
