--- a/keyOS/res/layout/drawer_header.xml
+++ b/keyOS/res/layout/drawer_header.xml
@@ -2,8 +2,18 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="20dp">
 
+
+    <TextView
+        android:layout_width="match_parent"
+        android:text="By DevAsh"
+        android:textSize="20dp"
+        android:textColor="@color/black"
+        android:gravity="center_vertical"
+        android:paddingLeft="20dp"
+        android:visibility="gone"
+        android:layout_height="match_parent"/>
 
     <LinearLayout
         android:layout_alignParentBottom="true"
