--- a/keyOS/res/layout/sheet_access_denied.xml
+++ b/keyOS/res/layout/sheet_access_denied.xml
@@ -34,6 +34,7 @@
                 android:layout_marginTop="30dp"
                 android:gravity="center"
                 android:lineHeight="20dp"
+                android:id="@+id/subTitle"
                 android:text="You are not allowed to access this content"
                 android:textColor="#E6ffffff"
                 android:layout_height="match_parent"/>
