--- a/keyOS/res/layout/fragment_user_agreement.xml
+++ b/keyOS/res/layout/fragment_user_agreement.xml
@@ -100,6 +100,7 @@
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:gravity="center"
+            android:weightSum="2"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
@@ -111,25 +112,31 @@
                 android:paddingHorizontal="20dp"
                 android:textColor="@color/buttonColor"
                 android:layout_height="wrap_content"/>
-            <androidx.cardview.widget.CardView
-                android:layout_marginTop="20dp"
+            <LinearLayout
+                android:layout_weight="1"
                 android:layout_width="wrap_content"
-                android:layout_marginHorizontal="30dp"
-                app:cardCornerRadius="20dp"
-                android:layout_marginVertical="12dp"
-                android:layout_height="40dp">
+                android:gravity="center"
+                android:layout_height="wrap_content">
+                <androidx.cardview.widget.CardView
+                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    app:cardCornerRadius="20dp"
+                    android:layout_marginVertical="12dp"
+                    android:layout_height="40dp">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:text="Accept &amp; continue"
-                    android:id="@+id/acceptAndContinue"
-                    android:gravity="center"
-                    android:paddingHorizontal="20dp"
-                    android:textColor="@android:color/white"
-                    android:background="@color/buttonColor"
-                    android:layout_height="match_parent"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:text="Accept &amp; continue"
+                        android:id="@+id/acceptAndContinue"
+                        android:gravity="center"
+                        android:paddingHorizontal="20dp"
+                        android:textColor="@android:color/white"
+                        android:background="@color/buttonColor"
+                        android:layout_height="match_parent"/>
 
-            </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
 
         </LinearLayout>
 
