--- a/keyOS/res/layout/widget_listtile_website.xml
+++ b/keyOS/res/layout/widget_listtile_website.xml
@@ -3,6 +3,9 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_vertical"
+    android:id="@+id/itemRoot"
+    android:clickable="true"
+    android:focusable="true"
     android:layout_gravity="center"
     android:layout_height="60.5dp">
 
@@ -18,30 +21,33 @@
             android:layout_marginLeft="10dp"
             android:layout_height="70dp">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardView"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                app:cardCornerRadius="17.5dp"
-                app:cardElevation="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+
 
                 <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:id="@+id/cardView"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_height="35dp"
+                    android:layout_width="35dp">
 
                     <ImageView
                         android:id="@+id/profile"
                         android:layout_width="match_parent"
+                        android:scaleType="center"
                         android:layout_height="match_parent"
-                        android:scaleType="centerCrop"
                         android:visibility="invisible" />
 
-                    <RelativeLayout
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        app:cardCornerRadius="17.5dp"
                         android:id="@+id/badgeContainer"
+                        app:cardElevation="0dp"
+                  >
+
+                    <RelativeLayout
                         android:layout_width="35dp"
                         android:layout_height="35dp">
 
@@ -63,9 +69,9 @@
 
 
                     </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
                 </FrameLayout>
 
-            </androidx.cardview.widget.CardView>
 
 
             <net.igenius.customcheckbox.CustomCheckBox
