--- a/keyOS/res/layout/sheet_access_denied.xml
+++ b/keyOS/res/layout/sheet_access_denied.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     android:background="@color/black"
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
@@ -10,14 +11,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
-            android:layout_centerInParent="true"
             android:layout_height="wrap_content">
 
             <ImageView
                 android:layout_width="200dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="20dp"
-                android:src="@drawable/ic_key_ring"
+                android:src="@drawable/ic_key_ring_image_playstore"
                 android:layout_height="200dp"/>
 
             <TextView
