--- a/keyOS/res/layout/widget_listtile_website.xml
+++ b/keyOS/res/layout/widget_listtile_website.xml
@@ -35,7 +35,7 @@
                     <ImageView
                         android:id="@+id/profile"
                         android:layout_width="match_parent"
-                        android:scaleType="center"
+                        android:scaleType="centerCrop"
                         android:layout_height="match_parent"
                         android:visibility="invisible" />
 
