--- a/keyOS/res/menu/drawer_menu.xml
+++ b/keyOS/res/menu/drawer_menu.xml
@@ -14,6 +14,10 @@
             android:title="Bug report"
             android:id="@+id/bug"
             app:showAsAction="never" />
+        <item
+            android:title="Visit"
+            android:id="@+id/visit"
+            app:showAsAction="never" />
 
     </group>
 
