remove context package

--- a/keyOS/res/menu/drawer_menu.xml
+++ b/keyOS/res/menu/drawer_menu.xml
@@ -58,7 +58,7 @@
     </group>
     <group>
         <item
-            android:title="Terms And Conditions"
+            android:title="Terms &amp; Conditions"
             android:id="@+id/termsAndCondition"
             app:showAsAction="never" />
         <item
