--- a/keyOS/res/layout/drawer_header.xml
+++ b/keyOS/res/layout/drawer_header.xml
@@ -2,23 +2,71 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="20dp">
+    android:layout_height="150dp">
 
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:text="By DevAsh"
-        android:textSize="20dp"
-        android:textColor="@color/black"
+        android:orientation="vertical"
         android:gravity="center_vertical"
         android:paddingLeft="20dp"
-        android:visibility="gone"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:src="@drawable/android"
+            android:layout_height="65dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:id="@+id/aboutDevice"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="Device ID"
+                    android:textStyle="bold"
+                    android:textSize="15dp"
+                    android:textColor="@color/black"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:textSize="12dp"
+                    android:text="asbdvgydkddkkd"
+                    android:layout_marginTop="1dp"
+                    android:id="@+id/androidID"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:tint="@color/grey"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ios_forward"
+                android:layout_height="20dp"/>
+
+        </LinearLayout>
+
+
+
+
+
+    </LinearLayout>
+
+
+
+
 
     <LinearLayout
         android:layout_alignParentBottom="true"
         android:background="#20000000"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
 
