--- a/keyOS/res/layout/drawer_header.xml
+++ b/keyOS/res/layout/drawer_header.xml
@@ -9,17 +9,19 @@
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:gravity="center_vertical"
-        android:paddingLeft="20dp"
         android:layout_height="match_parent">
 
         <ImageView
             android:layout_width="50dp"
-            android:src="@drawable/android"
+            android:layout_marginLeft="17.5dp"
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/key_ring"
             android:layout_height="65dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:gravity="center"
+            android:paddingLeft="20dp"
             android:layout_height="wrap_content">
             <LinearLayout
                 android:layout_width="wrap_content"
