--- a/keyOS/res/layout/fragment_password_prompt_sheet.xml
+++ b/keyOS/res/layout/fragment_password_prompt_sheet.xml
@@ -36,11 +36,11 @@
             android:layout_marginBottom="10dp"
             android:layout_height="wrap_content">
 
-            <tech.DevAsh.Launcher.settings.ui.search.SettingsSearchView
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingStart="-4dp"
+                android:paddingHorizontal="5dp"
                 android:imeOptions="actionDone"
                 android:layout_marginHorizontal="15dp"
                 android:paddingEnd="0dp"
