--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -1,6 +1,6 @@
 <resources>
 <!-- Miscellaneous -->
-    <bool name="config_largeHeap">false</bool>
+    <bool name="config_largeHeap">true</bool>
     <bool name="is_tablet">false</bool>
     <bool name="is_large_tablet">false</bool>
     <bool name="allow_rotation">false</bool>
